# ivory

./: .editorconfig  Cargo.toml  README.md  grammar.ebnf
.github/workflows/: main.yml  rust.yml
example/: pathfinder.ivory
ivory-expression/: Cargo.toml
ivory-expression/src/: iter.rs  lib.rs  ternary.rs
ivory-interpreter/: Cargo.toml
ivory-interpreter/src/: accessor.rs  alias.rs  commands.rs  error.rs  expression.rs  function.rs  istruct.rs  itype.rs  lib.rs  util.rs  values.rs  variable.rs
ivory-interpreter/src/expression/: dice.rs  function_call.rs  math.rs
ivory-interpreter/src/values/: array.rs  boolean.rs  decimal.rs  dice.rs  integer.rs  object.rs  string.rs  struct_instance.rs
ivory-interpreter/tests/: files.rs
ivory-node/: Cargo.toml  README.md  package.json
ivory-node/src/: lib.rs
ivory-repl/: Cargo.toml
ivory-repl/src/: commands.rs  error.rs  files.rs  format.rs  hint.rs  main.rs
ivory-repl/test/: test01.ivory  test01_pathfinder.ivory  test02.ivory
ivory-repl/test/subdir/: test03.ivory
ivory-runtime/: Cargo.toml
ivory-runtime/src/: error.rs  expr.rs  lib.rs  mod_loader.rs  prec.rs  roll.rs  runtime.rs  std_fns.rs  struct_value.rs  value.rs  variable.rs
ivory-tokenizer/: Cargo.toml
ivory-tokenizer/src/: accessor.rs  commands.rs  comment.rs  expression.rs  istruct.rs  itype.rs  lib.rs  module.rs  table.rs  ternary.rs  util.rs  values.rs  variable.rs
ivory-tokenizer/src/expression/: dice_ops.rs  logic.rs  math.rs
ivory-tokenizer/src/module/: iuse.rs
ivory-tokenizer/tests/: files.rs  test01.iv
src/: context.rs  data_layer.rs  error.rs  expression_result.rs  lib.rs  parse.rs
src/syntax/: dice.rs  expression.rs  function.rs  number.rs  program.rs  util.rs  variable.rs
(+9 files in other folders)
