[package]
name = "ivory"
version = "0.1.0"
authors = ["mcpar-land"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
quick-error = "2.0.0"
prec = "0.1.1"
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"