[package]
name = "ivory-repl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
nom = "7.0.0"
colored = "2.0"
ansi_term = "0.12.1"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
rand = "0.8.4"
quick-error = "2.0.1"
ivory-runtime = { path = "../ivory-runtime" }
ivory-tokenizer = { path = "../ivory-tokenizer" }
ivory-expression = { path = "../ivory-expression" }
notify = "4.0.17"
reqwest = { version = "0.11.6", features = [ "blocking" ] }
relative-path = "1.5.0"