[package]
name = "ivory-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivory-tokenizer = { path = "../ivory-tokenizer" }
quick-error = "2.0.1"
rand = "0.8.4"
prec = "1.1.0"
lazy_static = "1.4.0"